assets/sass/_core.scss
/* ... */
#moreArticlesList {
  ul {
    margin: 0 0;
    padding: 20px 0 0;
    list-style: none;
  }
  li {
    position: relative;
    font-size: 13px;
    margin: 0 0 20px;
  }
  .author {
    margin: 0 0 3px;
  }
  .posttitle {
    color: $primary;
    font-size: 14px;
    font-weight: 500;
    text-decoration: none;
  }
  .loadmore {
    a {
      display: inline-block;
      text-decoration: underline;
      color: $secondary;
      font-size: 13px;
      font-weight: 600;
    }
  }
  a:hover {
    color: tint($secondary,40%);
  }
  .itemLink {
    a:hover {
      color: $light_blue;
    }
  }
  .author a {
    color: $secondary;
    text-decoration: none;
    &:hover {
      color: tint($secondary,40%);
    }
  }
}



/* SOCIAL MEDIA */
.shared-counts-wrap.after_content {
  position: relative;
  margin-top: 30px;
  &:before {
    content: "Share";
    display: inline-block;
    color: $secondary;
    font-size: 13px;
    font-weight: bold;
    position: relative;
    top: -10px;
    margin-right: 10px;
  }
  &.style-slim {
    a {
      display: inline-block;
      width: 30px;
      height: 30px;
      border-radius: 100px!important;
      position: relative;
      span.shared-counts-icon-label {
        display: block;
        width: 100%;
        height: 100%;
        text-align: center;
        position: absolute;
        top: 0;
        left: 0;
        .shared-counts-icon {
          position: absolute;
          top: 50%;
          left: 0;
          transform: translateY(-50%);
          margin: 0 auto;
          width: 100%;
          text-align: center;
        }
      }
      span.shared-counts-label {
        display: none!important;
      }
    }
  }
}

body.subpage .default-template {
  .entry-content {
    max-width: 100%;
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 0;
    margin-bottom: 0;
  }
  .twocol {
    padding-top: 80px;
    padding-bottom: 80px;
    position: relative;
    .wp-block-group__inner-container {
      position: relative;
      z-index: 10;
    }
    h2 {
      font-size: 25px;
      font-weight: normal;
      line-height: 1.2;
      margin: 0 0 15px;
      padding-bottom: 5px;
      border-bottom: 1px solid $secondary;
      @include tab {
        font-size: 35px;
      }
    }
    .textcol {
      padding-left: 0;
      @include tab {
        padding-left: 3vw;
      }
    }
  }
  .twocol:nth-child(even) {
    background: #F5F0EC;
    @include tab {
      &:after {
        content:"";
        display: block;
        width: 20%;
        height: 100%;
        position: absolute;
        top: 0;
        right: 0;
        background: $brown;
      }
    }

    .wp-block-columns {
      @include tab {
        flex-direction: row-reverse;
        .textcol {
          padding-left: 0;
          padding-right: 3vw;
        }
      }
    }
  }

  .blue-pattern {
    h2 {
      font-size: 25px;
      font-weight: normal;
      line-height: 1.2;
      margin: 0 0 15px;
      @include tab {
        font-size: 35px;
      }
      strong {
        font-weight: normal;
        display: inline-block;
        border-bottom: 1px solid $secondary;
      }
    }
  }
}

.page404 {
  padding-top: 80px;
  padding-bottom: 80px;
  h1.page-title {
    margin-top: 0;
    margin-bottom: 8px;
  }
  .content404 {
    .innerText {
      padding: 0 15px;
    }
  }
}

#sitemap {
  a {
    text-decoration: none;
    color: $primary;
    &:hover {
      color: $secondary;
    }
  }
}

/* FOOTER */
.site-footer {
  background: #FFF;
  .flexwrap {
    @include flexbox-justify(space-between);
  }
  .wrapper {
    padding-top: 30px;
    padding-bottom: 30px;
  }
  .footlogo {
    margin-bottom: 10px;
    img {
      width: 160px;
      height: auto;
    }
  }
  .fcol {
    padding: 10px 10px;
  }
  .fcol1 {
    font-size: 13px;
    line-height: 1.4;
  }
  .fcol5 {
    max-width: 350px;
    width: 100%;
    font-size: 13px;
    .inner {
      margin:0 -5px;
    }
    .footer-logos {
      margin-top: 15px;
      margin-bottom: 15px;
    }
    img {
      display: inline-block;
      width: auto;
      height: 30px;
      margin: 0 5px;
    }
    p {
      color: #8e8e8e;
      margin: 10px 0 0;
    }
    p:first-child {
      margin-top: 0;
    }
  }
  .fcol.links {
    margin-top: 15px;
  }
  .ftitle {
    font-size: 14px;
    font-weight: 600;
    line-height: 1.2;
    margin-bottom: 8px;
  }
  .ftext {
    font-size: 13px;
    ul {
      margin:0 0;
      padding: 0 0;
      list-style: none;
    }
    ul > li {
      margin: 0 0 8px;
      a {
        text-decoration: none;
        color: #000;
        &:hover {
          color: $primary;
        }
      }
    }
    ul > li:last-child {
      margin-bottom: 0;
    }
  }
  @include max($xswidth) {
    .fcol {
      max-width: 100%;
      width: 100%;
      text-align: center;
    }
  }
}

@media screen and (max-width: 782px) {
  body.logged-in.admin-bar {
    #page {
      padding-top: 85px;
    }
  }
  html #wpadminbar {
    position: fixed;
    top: 0;
    left: 0;
  }
}

